# DreamLoop

./: .coverage  .gitignore  .replit  Pasted--2024-10-28-13-59-21-460-ERROR-in-app-Exception-on-dream-new-GET-Traceback-most-recent-call-la-1730123986724.txt  Pasted--2024-10-28-14-04-36-709-ERROR-in-app-Exception-on-dream-patterns-GET-Traceback-most-recent-ca-1730124300277.txt  Pasted--DreamShare-python-m-pytest-v-tb-short-2024-11-14-13-48-08-235-INFO-sqlalchemy-engine-Engine-s-1731592281828.txt  Pasted--INFO-werkzeug-172-31-196-19-29-Oct-2024-23-37-47-POST-login-HTTP-1-1-302-ERROR-app-Exc-1730245087507.txt  Pasted--POST-dream-new-HTTP-1-1-302-ERROR-app-Exception-on-dream-2-GET-Traceback-most-recent-call-l-1730562663320.txt  Pasted--Running-on-http-172-31-196-14-5000-INFO-werkzeug-Press-CTRL-C-to-quit-INFO-werkzeug-172-31-196--1730221840204.txt  Pasted--connection-info-max-connections-450-postgresql-version-PostgreSQL-16-4-on-x86-64-pc-linux-1731637866501.txt  Pasted--home-runner-DreamShare-app-py-28-LegacyAPIWarning-The-Query-get-method-is-considered-legacy-as--1731776933501.txt  Pasted-1-Core-Concept-and-Value-Proposition-Dream-Journal-allows-users-to-document-their-dreams-receive-A-1730123555018.txt  Pasted-172-31-196-70-28-Oct-2024-15-17-35-GET-static-css-custom-css-HTTP-1-1-304-172-31-196-70--1730128715036.txt  Pasted-172-31-196-70-28-Oct-2024-15-19-59-GET-HTTP-1-1-302-172-31-196-70-28-Oct-2024-15-19-1730128858337.txt  Pasted-2024-11-14-19-52-28-188-None-GET-http-localhost-localdomain-Level-ERROR-Module-logging--1731614227514.txt  Pasted-2024-11-14-19-59-00-253-127-0-0-1-POST-http-localhost-localdomain-register-Level-ERROR-Mo-1731614523185.txt  Pasted-DEBUG-app-Static-folder-path-home-runner-DreamShare-static-Serving-Flask-app-app-Debug-mod-1730245897634.txt  Pasted-ERROR-app-Exception-on-GET-Traceback-most-recent-call-last-File-home-runner-DreamShare-p-1730295039419.txt  (+86 more)
blueprints/: __init__.py  auth.py  dreams.py  forum.py  groups.py
dreamloop/: __init__.py  ai_helper.py  (+6 more)
(+71 files in other folders)
