[project]
name = "repl-nix-dreamshare"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.52.2",
    "flask-login>=0.6.3",
    "google-generativeai>=0.8.3",
    "google-ads>=25.1.0",
    "stripe>=11.1.1",
    "sqlalchemy",
    "werkzeug",
    "markdown>=3.7",
    "psutil>=6.1.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.1",
    "click>=8.1.7",
    "schedule>=1.2.2",
    "gzip-reader>=0.1",
    "flask-testing",
    "flask-wtf",
    "pytest-xdist",
    "pytest-timeout",
    "coverage",
    "faker>=32.1.0",
    "pytest-randomly>=3.16.0",
    "pytest-env",
    "freezegun",
]
